--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
