--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.23.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
