--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,25 @@
-# Ignore Mac system files
-.DS_store
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Ignore VSCode store file
-.vscode
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Ignore node_modules folder
-node_modules
+# testing
+/coverage
 
-# ignore stage file
-package-lock.json
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.env
