--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.3",
-    "moment": "^2.29.4",
     "mdb-react-ui-kit": "^5.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -48,7 +48,8 @@
     ]
   },
   "overrides": {
-    "autoprefixer": "10.4.5"},
+    "autoprefixer": "10.4.5"
+  },
   "devDependencies": {
     "prettier": "^2.8.0"
   }
